--- a/ejercicio/index.html
+++ b/ejercicio/index.html
@@ -5,7 +5,6 @@
 
     <title>The lycanthropes’s log</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
       <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     
@@ -33,6 +32,20 @@
                 <th>#</th>
                 <th>Events</th>
                 <th>Squirrel</th>
+              </tr>
+            </thead>
+            <tbody>
+             
+            </tbody>
+          </table>
+
+           <h2>Correlation of Events</h2>
+        <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Event</th>
+                <th>Correlation</th>
               </tr>
             </thead>
             <tbody>
