--- a/ejercicio/index.html
+++ b/ejercicio/index.html
@@ -20,7 +20,7 @@
   <body>
    
     <header>
-        <h1>Encabezado</h1>
+        <h1>Ejercicio sobre manejo del DOM</h1>
     </header>
   
       <main>
